# cursor_test

./: README.md
dimos-robot-test/: .env.example  .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini
dimos-robot-test/.github/workflows/: ci.yml
dimos-robot-test/configs/: profiles.yaml  safety.yaml
dimos-robot-test/fixtures/: tools_golden.json
dimos-robot-test/scripts/: ci_run.sh  dimos_stack_down.sh  dimos_stack_up.sh
dimos-robot-test/src/dimos_testkit/: __init__.py  paths.py
dimos-robot-test/src/dimos_testkit/adapters/: __init__.py  base.py  hardware.py  mcp_cli.py  mcp_http.py  stack_subprocess.py
dimos-robot-test/src/dimos_testkit/assertions/: __init__.py  health.py  responses.py  timing.py
dimos-robot-test/src/dimos_testkit/cli_wrappers/: __init__.py  dimos_cmd.py
dimos-robot-test/src/dimos_testkit/observability/: __init__.py  artifacts.py  dimos_paths.py  log_collector.py
dimos-robot-test/src/dimos_testkit/reporting/: __init__.py  junit.py  summary.py
dimos-robot-test/src/dimos_testkit/safety/: __init__.py  gates.py
dimos-robot-test/src/dimos_testkit/skills/: __init__.py  contracts.py  registry.py
dimos-robot-test/tests/contract/: test_mcp_http_optional.py  test_mcp_tools_snapshot.py  test_skill_invoke_errors.py
dimos-robot-test/tests/integration_hardware/: test_hardware_smoke.py
dimos-robot-test/tests/integration_mcp/: test_mcp_transcript.py
dimos-robot-test/tests/integration_sim/: test_skill_move_smoke.py  test_stack_smoke.py
dimos-robot-test/tests/unit/: test_safety_gates.py  test_schema_contracts.py
